2004-12-19  Roland McGrath  <roland@redhat.com>

	* iconv/iconvconfig.c (nostdlib, output_file, output_file_len):
	New variables.
	(options, parse_opt, main): Take new options --nostdlib and
	--output/-o to set them.  Under --nostdlib, skip GCONV_PATH dirs.
	(write_output): If output_file is set, write the output there.

2004-12-19  Andreas Jaeger  <aj@suse.de>NULL

	[BZ #560]
	* inet/netinet/in.h: Use __interface_addr instead of __interface.

	[BZ #573]
	* sunrpc/xcrypt.c (passwd2des_internal): Make it hidden instead of
	internal linkage.

2004-12-19  Roland McGrath  <roland@frob.com>

	* version.h (VERSION): 2.3.4.
	* README.template: Various updates.
	* README: Regenerated.
	* NEWS: Mention ports.
	* README-alpha: File removed.

	[BZ #416]
	* locale/langinfo.h: Comment fixes.

2004-12-17  Ulrich Drepper  <drepper@redhat.com>

	* po/ja.po: Update from translation team.

2004-12-17  Richard Henderson  <rth@redhat.com>

	* sysdeps/unix/sysv/linux/alpha/clone.S (__clone): Add support
	for NPTL where the PID is stored at userlevel and needs to be
	reset when CLONE_THREAD is not used.

2004-12-17  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/sparc/sparc64/fpu/libm-test-ulps: Update.

2004-12-17  Andreas Jaeger  <aj@suse.de>

	* math/libm-test.inc (atan2_test): Compute value with 36 digits.
	* sysdeps/alpha/fpu/libm-test-ulps: Adjust for changed result.
	* sysdeps/powerpc/fpu/libm-test-ulps: Likewise.
	* sysdeps/s390/fpu/libm-test-ulps: Likewise.
	* sysdeps/sparc/sparc32/fpu/libm-test-ulps: Likewise.
	* sysdeps/sparc/sparc64/fpu/libm-test-ulps: Likewise.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.

2004-12-16  Ulrich Drepper  <drepper@redhat.com>

	* stdlib/tst-setcontext.c: Enlarge st1 and st2 arrays.

2004-09-02  Steven Munroe  <sjmunroe@us.ibm.com>

	[BZ #610]
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/getcontext.S
	(__novec_getcontext): Fix typo in store of fp29.
	(__getcontext): Fix typo in store of fp29.